Fixes vertical-align issue and adds some content

--- a/website/less/final.less
+++ b/website/less/final.less
@@ -6,13 +6,10 @@
   padding-top: 75px;
 
   background: rgba(255,255,255,1);
-  background: -moz-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,250,242,1) 100%);
-  background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%, rgba(255,255,255,1)), color-stop(100%, rgba(255,250,242,1)));
-  background: -webkit-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,250,242,1) 100%);
-  background: -o-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,250,242,1) 100%);
-  background: -ms-radial-gradient(center, ellipse cover, rgba(255,255,255,1) 0%, rgba(255,250,242,1) 100%);
-  background: radial-gradient(ellipse at center, rgba(255,255,255,1) 0%, rgba(255,250,242,1) 100%);
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#fffaf2', GradientType=1 );
+
+  td.center-title {
+    vertical-align: middle;
+  }
 
   th, td {
     padding: 20px;
